corrected broken styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,46 +1,3 @@
-.App {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
-  background-image: url(./img/sky.jpg);
-  background-size: cover;
-}
-
-.container {
-  flex: 1;
-  color: white;
-}
-
-.App-logo {
-  animation: shake infinite 1s linear;
-  height: 80px;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
-}
-
-.App-header {
-  background-color: #000000;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-a {
-  text-decoration: none;
-  text-transform: capitalize;
-  color: rgb(92, 230, 205);
-}
 
 @keyframes shake {
   10%, 90% {
