--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -1,8 +1,11 @@
 .root-panel-wrapper {
-  height: 100%;
-  flex: 1;
   display: flex;
   flex-direction: column;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  background-image: url(../../img/sky.jpg);
+  background-size: cover;
 
   .active {
     color: rgb(19, 37, 141);
